--- a/src/style/style.css
+++ b/src/style/style.css
@@ -348,3 +348,205 @@ width: 100%;
     background-color: black!important;
     border: black!important;
   }
+
+  .profileBtn{
+
+    max-width: 634.5px;
+height: 40px;
+/* flex-shrink: 0;  */
+border-radius: 5px;
+background: #DEDBDE;
+width: 100%; 
+border: none;
+margin-left: 10px;
+padding: 6px;
+}
+
+
+
+
+.ProfileContainer {
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  margin: auto;
+  gap: 20px;
+  /* margin-top: 25px; */
+  width: 100%;
+  /* padding: 10px; */
+}
+
+.profileCard{
+  max-width: 1366px;
+  height: 230px;
+  flex-shrink: 0;
+  background: #F8F6F8;
+width:100%;
+position: relative;
+}
+
+.profileCard>span svg{
+
+  width: 24px;
+flex-shrink: 0;
+border-radius: 9999px;
+background-color: #dbd8d8;
+position: absolute;
+bottom: 15px;
+right: 20px;
+
+}
+
+
+.Profileposition{
+
+  position: relative;
+  top: 157px;
+  left: 30px;
+}
+
+.Profileposition>span{
+  background-color: #dbd8d8;
+  border-radius: 9999px;  
+}
+
+.profileDetails{
+
+  padding-left: 5%;
+  align-items: start;
+  padding-top: 6%;
+  width: 100%;
+  padding-bottom: 20px;
+}
+
+.profileDetails p{
+  color: #ADADAD;
+font-family: Roboto;
+font-size: 15px;
+font-style: normal;
+font-weight: 500;
+line-height: 24px; 
+margin: 0;
+}
+
+.profileDetails p:nth-child(2){
+  color: #000;
+font-family: Roboto;
+font-size: 22px;
+font-style: normal;
+font-weight: 500;
+line-height: 45px; /* 204.545% */
+margin: 0;
+}
+
+
+.ProfileNav{
+
+
+  padding: 26px;
+  padding-top: 15px;
+}
+
+
+
+
+
+.ProfileNav>ul{
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+
+}
+
+.ProfileNav>ul li{
+  max-width: 425.907px;
+  width: 100%;
+  border-bottom: solid 1px #E9E6E9;
+  padding: 10px;
+  color: #ADADAD;
+}
+
+
+.ProfileNav_Active{
+  border-bottom: solid 1px black !important;
+  color: black !important;
+  
+}
+
+
+
+
+.profile_Setting{
+  
+}
+
+.profile_about{
+  display: flex;
+  flex-direction: column;
+  padding: 70px;
+  padding-top: 0;
+  gap: 30px;
+}
+
+.profile_about div{
+  
+  border-radius: 5px;
+  border: 1px solid #D8D8D8;
+  background: #FFF;
+  padding: 30px;
+
+/* //for p */
+  color: #C5C5C5;
+  /* font-family: Rosario; */
+  font-size: 16px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: 30px; /* 136.364% */
+
+}
+
+.profile_Tributes{
+
+  display: flex;
+  flex-direction: column;
+  padding: 34px;
+  padding-top: 0px;
+  
+}
+
+.profile_Tributes div{
+  display: flex;
+  border-bottom: solid 1px gray;
+  padding: 15px;
+  gap: 20px;
+  align-items: center;
+}
+
+.profile_Tributes div p{
+  margin: 0;
+  color: #ADADAD;
+}
+
+.profile_media{
+
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  padding: 20px;
+  max-width: 1000px;
+  width: 100%;
+/* border: solid 2px black; */
+margin: auto;
+
+}
+
+.profile_media_img{
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 208px;
+  height: 183px;
+flex-shrink: 0;
+background: #EEEBEE;
+}
